# ccdrop

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
cli/: Cargo.toml
cli/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
static/: crypto.js  index.html
