[package]
name = "ccdrop-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ccdrop"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
reqwest = "0.13.3"
tokio = {workspace = true}
aes-gcm = { version = "0.10", features = ["alloc"]}
base64 = "0.22.1"
rand = {workspace = true}
zstd = "0.13"
